# burrow

./: .dockerignore  .gitignore  .mcp.json  .mcp.json.template  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  bootstrap.sh  prompt.md  pyproject.toml
.beads/: metadata.json
.beads/backup/: backup_state.json  config.jsonl  events.jsonl  issues.jsonl
.claude-plugin/: plugin.json
.gemini/: settings.json
.github/workflows/: auto-version.yml  ci.yml  deploy-registry.yml  release.yml  version-bump.yml
agents/: burrow-agent.md
android/: README.md  gradle.properties  gradlew  settings.gradle.kts
android/app/: build.gradle.kts  (+1 more)
burrow/: __init__.py  __main__.py  cli.py  computer_use.py  desktop.py  desktop_bridge.py  desktop_session.py  distributed.py  mcp_server.py  peer.py  protocol.py  server.py  updater.py
hooks/: hooks.json
native/: Cargo.toml  README.md
native/burrow-rd-host/: Cargo.toml
native/burrow-rd-host/src/: capture.rs  clipboard.rs  frame_types.rs  input.rs  ipc.rs  lib.rs  main.rs
native/burrow-rd-host/src/capture_backend/: direct_linux.rs  fallback.rs  mod.rs
native/burrow-rd-host/src/input_backend/: direct_linux.rs  mod.rs  x11_xdotool.rs
scripts/: burrow-registry.service  deploy-registry.sh  install-plugin.sh  install-universal.sh  local_two_way_smoketest.py
tests/: test_computer_use.py  test_desktop.py  test_desktop_bridge.py  test_desktop_session.py  test_distributed.py  test_mcp_compatibility.py  test_mcp_desktop.py  test_peer_compatibility.py  test_peer_desktop.py  test_protocol.py  test_server.py  test_updater.py
(+17 files in other folders)
