[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "burrow"
version = "0.1.0"
description = "Zero-config P2P networking: discovery, messaging, file transfer, tunneling"
requires-python = ">=3.11"
dependencies = ["websockets>=12.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
build = ["pyinstaller>=6.0"]

[project.scripts]
burrow = "burrow.cli:main"
