[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "burrow"
version = "0.7.0"
description = "Zero-config P2P networking: discovery, messaging, file transfer, tunneling"
license = "MIT"
requires-python = ">=3.11"
dependencies = ["websockets>=12.0", "mcp>=1.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
build = ["pyinstaller>=6.0"]
ray = ["ray[default]>=2.9"]
dask = ["dask[distributed]>=2024.1"]
all = ["ray[default]>=2.9", "dask[distributed]>=2024.1"]

[project.scripts]
burrow = "burrow.cli:main"
burrow-mcp = "burrow.mcp_server:main"
