[package]
name = "burrow-rd-host"
version = "0.1.0"
edition = "2024"
description = "Burrow desktop host sidecar scaffold"
license = "MIT"
publish = false

[lib]
name = "burrow_rd_host"
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
pretty_assertions = "1"
